--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Hello, Please enter a Key</h1>
+    <div id="heading"><h1>HELLO!! PLEASE PRESS ANY KEY TO GET JAVASCRIPT EVENT KEYCODE INFO</h1></div>
+    <div id="detail"></div>
     <div class="main">
-        <div class="item">
-            <h2>event.key</h2>
-            <h3 id="key"></h3>        
+        <div class="container">
+        <div class="item" id="itemkey"></div>
+        <div class="value" id="key"></div>   
         </div>
-        <div class="item">
-            <h2>event.code</h2>
-            <h3 id="code"></h3>        
+        <div class="container">
+        <div class="item" id="itemcode"></div>
+        <div class="value" id="code"></div>
         </div>
-        <div class="item">
-            <h2>event.which</h2>
-            <h3 id="which"></h3>        
+        <div class="container">
+        <div class="item" id="itemwhich"></div>
+        <div class="value" id="which"></div>
         </div>
     </div>
 
